# pandas-logging

./: .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  Pipfile  README.rst  logging.json  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-test-matrix.yml
docs/: conf.py  index.rst  modules.rst
src/pandas_log/: __init__.py  aop_utils.py  pandas_execution_stats.py  pandas_log.py  patched_logs_functions.py  settings.py
src/pd_logging/: __init__.py  __main__.py  cli.py
src/pd_logging/data/: __init__.py
src/pd_logging/features/: __init__.py
src/pd_logging/logger/: __init__.py
src/pd_logging/models/: __init__.py
src/pd_logging/visualizations/: __init__.py
src/pdlog/: __init__.py  accessor.py  logging.py  string.py
tests/: test_pd_logging.py
tests/features/: test_features.py
tests/pd_logging/data/: test_data.py
tests/pd_logging/logger/: test_logger.py
tests/pd_logging/models/: test_models.py
tests/pdlog/: test_accessors.py  test_logging.py  test_string.py
tests/visualizations/: test_visualizations.py
