[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
exclude = */migrations/*

[tool:pytest]
testpaths =
    tests
    pd_logging
    # manually add any additional package names if created
norecursedirs =
    migrations
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --cov=pd_logging
    # manually add --cov= any additional package names if created
    --cov-branch
    --pyargs
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

[isort]
force_single_line = True
line_length = 120
known_first_party = pd_logging
default_section = THIRDPARTY
forced_separate = test_pd_logging
not_skip = __init__.py
skip = migrations

[options]
setup_requires = setuptools_scm
